# storage/api-docs/api-docs.json
@@ -1264,6 +1264,70 @@
                 ]
             }
         },
+        "/chat/{chat}": {
+            "delete": {
+                "tags": [
+                    "Chat"
+                ],
+                "summary": "Delete specific chat history",
+                "description": "Delete a chat history by ID for the authenticated user. Requires Bearer token.",
+                "operationId": "80dfd723965f5cfd1f135fbe69eb2b79",
+                "parameters": [
+                    {
+                        "name": "chat",
+                        "in": "path",
+                        "description": "ID of the chat to be deleted",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "15"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success delete chat history",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "code": {
+                                            "type": "integer",
+                                            "example": 200
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Success delete chat history"
+                                        },
+                                        "data": {
+                                            "type": "string",
+                                            "example": null,
+                                            "nullable": true
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized - Invalid or missing token"
+                    },
+                    "404": {
+                        "description": "Chat not found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/nearest-halte": {
             "post": {
                 "tags": [
@@ -1375,7 +1439,7 @@
                                                                 "type": "integer",
                                                                 "example": 724
                                                             },
-                                                            "polyline": {
+                                                            "coords": {
                                                                 "type": "array",
                                                                 "items": {
                                                                     "type": "array",
